did some finishing on css and checked out some 404 issues.
for some reason doing the tabs on the 404 i somehow made some invisible
space. Cant seem to get rid of it.  background colors looking
horrendous.

--- a/cake_construct/css/404.css
+++ b/cake_construct/css/404.css
@@ -121,6 +121,10 @@ a{
     clear: both;
     overflow: hidden;
 }
+#title{
+    margin: 10px 15px;
+    padding:0px 41px;
+}
 .body-div .main{
     height: 1401px;
     background-color:#ccc;
@@ -224,6 +228,14 @@ a{
     width: 68%;
     float: right;
     clear: right;
+}
+.tabings li{
+    margin:10px 10px;
+    background-color: #bacda0;
+}
+
+#outer-container{
+    background-color: #becfe1;
 }
 /* -------------------------------- DIVIDER AND FOOTER SECTION */
 
